# geoprompt

./: .gitignore  README.md  compose.yaml  pyproject.toml
api/: Dockerfile  README.md  main.py  requirements.txt
api/models/: HYPERPARAMETERS.py  schemas.py
api/services/: gpt-prompt.md  openai.py  postgis.py
data/: README.md  SCHEMA.md  data.ipynb  data.py  download.sh  schema.yaml
front/: Dockerfile  Landline.py  app.py  requirements.txt  setup.py  temp.json
front/pages/: Docs.py
nginx/conf/: nginx.conf
postgis/: Dockerfile  init-postgis.sh
postgis/data/: README.md  example.csv
training/: README.md  finetune.json  gpt-prompt.md  gpt.py  parse.py  training.json  validate.json
training/experiments/: responses-ex2.json  responses-ex4.json  responses-formatted-ex2.sql  responses-formatted-ex4.sql
training/logs/: responses-ex1.json  responses-ex3.json  responses-formatted-ex1.sql  responses-formatted-ex3.sql
